--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node sever.js",
-    "dev":"nodemon sever.js",
+    "dev": "nodemon sever.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9"
